--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A SMB2 implementation in TypeScript",
   "repository": "https://github.com/ardean/smb2",
   "bugs": "https://github.com/ardean/smb2/issues",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "ardean",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -25,15 +25,17 @@
     "windows",
     "file-sharing"
   ],
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "dependencies": {
-    "moment-timezone": "^0.5.28"
+    "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
-    "@types/moment-timezone": "^0.5.12",
     "@types/node": "^13.7.4",
-    "nodemon": "^2.0.2",
-    "ts-node": "^8.6.2",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
     "tslint": "^6.1.0",
-    "typescript": "^3.8.2"
+    "typescript": "^4.0.3"
   }
 }
