--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@stifani/smb2",
+  "name": "@awo00/smb2",
   "description": "A SMB2 implementation in TypeScript",
-  "repository": "https://github.com/ardean/smb2",
-  "bugs": "https://github.com/ardean/smb2/issues",
+  "repository": "https://github.com/awo00/smb2",
+  "bugs": "https://github.com/awo00/smb2/issues",
   "version": "0.3.0",
-  "author": "ardean",
+  "author": "awo00",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon",
+    "start": "node dist/src/index.js",
+    "dev": "nodemon -r src/index.ts",
     "build": "rm -rf dist && tsc",
     "lint": "tslint --project ."
   },
@@ -32,7 +33,7 @@
     "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
-    "@types/node": "^13.7.4",
+    "@types/node": "^13.13.52",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.0",
