--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "bugs": "https://github.com/awo00/smb2/issues",
   "version": "0.3.0",
   "author": "awo00",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "start": "node dist/src/index.js",
     "dev": "nodemon -r src/index.ts",
-    "build": "rm -rf dist && tsc",
+    "build": "tsc --build",
     "lint": "tslint --project ."
   },
   "files": [
@@ -28,14 +28,14 @@
     "file-sharing"
   ],
   "engines": {
-    "node": ">18"
+    "node": ">=18"
   },
   "dependencies": {
     "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
     "@types/node": "^13.13.52",
-    "nodemon": "^2.0.4",
+    "nodemon": "^3.0.2",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.0",
     "typescript": "^4.0.3"
