--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "@awo00/smb2",
+  "name": "@stifani/smb2",
   "description": "A SMB2 implementation in TypeScript",
-  "repository": "https://github.com/awo00/smb2",
-  "bugs": "https://github.com/awo00/smb2/issues",
+  "repository": "https://github.com/ardean/smb2",
+  "bugs": "https://github.com/ardean/smb2/issues",
   "version": "0.4.0",
-  "author": "awo00",
+  "author": "ardean",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/src/index.js",
-    "dev": "nodemon -r src/index.ts",
-    "build": "tsc --build",
+    "start": "nodemon",
+    "build": "rm -rf dist && tsc",
     "lint": "tslint --project ."
   },
   "files": [
@@ -27,16 +26,14 @@
     "file-sharing"
   ],
   "engines": {
-    "node": ">=18"
+    "node": ">=10.0.0"
   },
   "dependencies": {
-    "des.js": "^1.1.0",
-    "js-md4": "^0.3.2",
     "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
-    "@types/node": "^13.13.52",
-    "nodemon": "^3.0.2",
+    "@types/node": "^13.7.4",
+    "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.0",
     "typescript": "^4.0.3"
