--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "A SMB2 implementation in TypeScript",
   "repository": "https://github.com/awo00/smb2",
   "bugs": "https://github.com/awo00/smb2/issues",
-  "version": "0.4.2",
-  "author": "ardean",
+  "version": "0.4.3",
+  "author": "awo00",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
