--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A SMB2 implementation in TypeScript",
   "repository": "https://github.com/awo00/smb2",
   "bugs": "https://github.com/awo00/smb2/issues",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "author": "awo00",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -29,6 +29,8 @@
     "node": ">=18"
   },
   "dependencies": {
+    "des.js": "^1.1.0",
+    "js-md4": "^0.3.2",
     "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
