--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "file-sharing"
   ],
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">= 18.12.x"
   },
   "dependencies": {
     "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
-    "@types/node": "^13.7.4",
+    "@types/node": "^18",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.9.3"
   }
 }
